[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Other/Breakable_Wall.gd" type="Script" id=1]
[ext_resource path="res://Assets/Entity/Breakable_Grate.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Other/Visibilty_Box.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 26.8168, 137.669 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 66.0844
height = 220.422

[node name="Wall" type="KinematicBody2D" groups=["collide"]]
light_mask = 2
collision_layer = 268443663
collision_mask = 15
script = ExtResource( 1 )

[node name="Visibilty_Box" parent="." instance=ExtResource( 3 )]

[node name="Wall_Collision" type="CollisionShape2D" parent="."]
scale = Vector2( 1.04412, 1.00967 )
shape = SubResource( 1 )

[node name="Wall_Hitbox" type="Area2D" parent="."]
collision_layer = 6
collision_mask = 6
gravity = 0.0

[node name="Hitbox_Shape" type="CollisionShape2D" parent="Wall_Hitbox"]
scale = Vector2( 1.04412, 1.00967 )
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
light_mask = 524290
scale = Vector2( 0.468354, 0.468354 )
texture = ExtResource( 2 )

[connection signal="viewport_entered" from="Visibilty_Box" to="." method="_on_Visibilty_Box_viewport_entered"]
[connection signal="viewport_exited" from="Visibilty_Box" to="." method="_on_Visibilty_Box_viewport_exited"]
[connection signal="body_entered" from="Wall_Hitbox" to="." method="_on_Wall_Hitbox_body_entered"]
